--- a/ejercicio.html
+++ b/ejercicio.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ejercicio.js"></script>
+    <script src="ejercicio1.js"></script>
 </body>
 </html>
