--- a/Tarjeta/index.html
+++ b/Tarjeta/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <div class="card">
-        <img class="img_card" src="img/santiago.jpeg" alt="">
+        <img class="img_card" src="img/santiago1.jpeg" alt="">
         <h1 class="card_tittle">SANTIAGO FAJARDO</h1>
         <h2 class="card_subtittle">PROGRAMADOR Y GAMER DE BRAWL</h2>
         <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid ab, ex sunt magni accusantium maxime suscipit quis voluptates? Nulla adipisci placeat nam laudantium sunt iusto quis unde? Eius, iusto!</p>
     </div>
 
     <div class="card blue-card">
-        <img class="img_card" src="img/santiago.jpeg" alt="">
+        <img class="img_card" src="img/santiago1.jpeg" alt="">
         <h1 class="card_tittle">SANTIAGO FAJARDO</h1>
         <h2 class="card_subtittle">PROGRAMADOR Y GAMER DE BRAWL</h2>
         <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid ab, ex sunt magni accusantium maxime suscipit quis voluptates? Nulla adipisci placeat nam laudantium sunt iusto quis unde? Eius, iusto!</p>
     </div>
 
     <div class="card red-card">
-        <img class="img_card" src="img/santiago.jpeg" alt="">
+        <img class="img_card" src="img/santiago1.jpeg" alt="">
         <h1 class="card_tittle">SANTIAGO FAJARDO</h1>
         <h2 class="card_subtittle">PROGRAMADOR Y GAMER DE BRAWL</h2>
         <p class="card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquid ab, ex sunt magni accusantium maxime suscipit quis voluptates? Nulla adipisci placeat nam laudantium sunt iusto quis unde? Eius, iusto!</p>
