agregamos nuevos diseños

--- a/front/index.html
+++ b/front/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="big-box">
         <nav>
             <ul class="nombre">
-                <li><a href="#1">SANTIAGO FAJARDO MORALES</a></li>
-            </ul>
-            <ul class="nombre">
-                <li><a href="#1">FRONT-END DEVELOPER</a></li>
+                <li><a href="#2">SANTIAGO FAJARDO MORALES</a></li>
+                <li><a href="#1">FRONT-END </a></li>
             </ul>
         </nav>
         <div class="img-box"></div>
         <div class="box-small">
             <div class="relevante-information">
-                <h2>Santiago Fajardo Morales</h2>
+                <h2>Desarrollador Web</h2>
                 <h3>Front-end developer</h3>
-                <p>Soy el encargado de el diseño de la página que tenga un interfaz llamativa para que el usuario le apetesca navegar</p>
+                <p>Soy el encargado de el diseño de la página que tenga un interfaz llamativa para que el usuario le
+                    apetesca navegar</p>
                 <a href="https://www.instagram.com/santi_fa77/" target="_blank">Acerca de mi</a>
             </div>
         </div>
@@ -35,5 +36,19 @@
             <img src="img/log php.png" alt="">
         </div>
     </div>
+    <div class="about-me" id="2">
+        <div class="about-me-text">
+            <h2>ACERCA DE MI</h2>
+            <p>Hola, soy Santiago Fajardo Morales, tengo 18 años y soy estudiante del SENA en el programa de Ingenieria
+                de Sistemas. Me gusta mucho la programación y el diseño web, por lo que me gustaría dedicarme a esto en
+                un futuro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo officiis quae,
+                aliquam veritatis sunt facere, delectus, beatae ducimus enim deleniti? Aliquam, saepe natus! Doloremque
+                reiciendis dolorem quia exercitationem esse.</p>
+        </div>
+        <div class="about-me-img">
+            <img src="img/santiago1.jpeg" alt="">
+        </div>
+    </div>
 </body>
+
 </html>
