se suben practicas del DOM

--- a/front/index.html
+++ b/front/index.html
@@ -5,28 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Mi Portafolio</title>
 </head>
 
 <body>
-    <div class="big-box">
-        <nav>
-            <ul class="nombre">
-                <li><a href="#2">SANTIAGO FAJARDO MORALES</a></li>
-                <li><a href="#1">FRONT-END </a></li>
-            </ul>
-        </nav>
-        <div class="img-box"></div>
-        <div class="box-small">
-            <div class="relevante-information">
-                <h2>Desarrollador Web</h2>
-                <h3>Front-end developer</h3>
-                <p>Soy el encargado de el diseño de la página que tenga un interfaz llamativa para que el usuario le
-                    apetesca navegar</p>
-                <a href="https://www.instagram.com/santi_fa77/" target="_blank">Acerca de mi</a>
-            </div>
-        </div>
-    </div>
+    <nav class="navbar">
+        <ul>
+            <li><a href="">Mas sobre mi</a></li>
+            <li><a href="">Redes Sociales</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><a href="">Comentarios</a></li>
+        </ul>
+    </nav>
+    <section class="habilidades">
+        <h2>habilidades</h2>
+        <p>Tecnologias que tengo conocimiento</p>
+    </section>
     <div class="informacion" id="1">
         <h2>LENGUAJES (DOMINADOS)</h2>
         <div class="imagenes">
@@ -36,19 +30,7 @@
             <img src="img/log php.png" alt="">
         </div>
     </div>
-    <div class="about-me" id="2">
-        <div class="about-me-text">
-            <h2>ACERCA DE MI</h2>
-            <p>Hola, soy Santiago Fajardo Morales, tengo 18 años y soy estudiante del SENA en el programa de Ingenieria
-                de Sistemas. Me gusta mucho la programación y el diseño web, por lo que me gustaría dedicarme a esto en
-                un futuro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo officiis quae,
-                aliquam veritatis sunt facere, delectus, beatae ducimus enim deleniti? Aliquam, saepe natus! Doloremque
-                reiciendis dolorem quia exercitationem esse.</p>
-        </div>
-        <div class="about-me-img">
-            <img src="img/santiago1.jpeg" alt="">
-        </div>
-    </div>
+
 </body>
 
 </html>
