subo arreglos en el portafolio

--- a/front/index.html
+++ b/front/index.html
@@ -9,19 +9,24 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar" >
         <ul>
-            <li><a href="">Mas sobre mi</a></li>
-            <li><a href="">Redes Sociales</a></li>
+            <li><a href="#1">Mas sobre mi</a></li>
+            <li><a href="#2">Lenguajes</a></li>
             <li><a href="">Contacto</a></li>
             <li><a href="">Comentarios</a></li>
         </ul>
     </nav>
-    <section class="habilidades">
-        <h2>habilidades</h2>
-        <p>Tecnologias que tengo conocimiento</p>
+    <section class="habilidades" id="1">
+        <div class="texto">
+            <h2>HOLA MI NOMBRE ES SANTIAGO</h2>
+            <p>Me destaco en ser desarrollador Front-End, me gusta crear sitios web atractivos y funcionales, Estoy trabajando en mejorar mis habilidades constantemente.</p>
+        </div>
+        <div class="imagen">
+            <img src="img/fotoPortafolio.jpg" alt="">
+        </div>
     </section>
-    <div class="informacion" id="1">
+    <div class="informacion" id="2">
         <h2>LENGUAJES (DOMINADOS)</h2>
         <div class="imagenes">
             <img src="img/logo html.png" alt="">
