arreglar conexion de imagenes y de css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/front/style.css">
     <title>Mi Portafolio</title>
 </head>
 
@@ -24,10 +24,10 @@
     <div class="informacion" id="1">
         <h2>LENGUAJES (DOMINADOS)</h2>
         <div class="imagenes">
-            <img src="img/logo html.png" alt="">
-            <img src="img/logo css.png" alt="">
-            <img src="img/logo js.webp" alt="">
-            <img src="img/log php.png" alt="">
+            <img src="front/img/logo html.png" alt="">
+            <img src="front/img/logo css.png" alt="">
+            <img src="front/img/logo js.webp" alt="">
+            <img src="front/img/log php.png" alt="">
         </div>
     </div>
 
